step-web/src/main/webapp/scss/passage.scss
/* ... */
h6.level {
  text-align: center;
  font-size: 80%;
  clear: both;
}

h2.heading {
  font-size: 120%;
}

h3.heading {
  font-size: 110%;
}

h4.heading {
  font-size: 100%;
  padding: 0;
  margin: 0;
}

h2.xgen {
  font-size: 170%;
}

h2.xgen ul {
  font-variant: normal;
}

h2.heading,
input.heading {
  font-weight: bold;
  margin: 15px 0 10px 0;
  line-height: 23px;
}

input.heading {
  font-size: 130%;
  text-align: left;
}

/** Some interlinear rules */
/* Define the nature of a "word" */
span.interlinear span { /* Make each word follow the other */
  float: left;
  /* Make sure that there is spacing between words */
  /* And extra spacing between lines */
  padding: 0em 0.5em 0.5em 0em;
  white-space: nowrap;
  text-align: right;
}

.verseGrouping span.rtl {
  text-align: right;
}

span.rtl span { /* Make each word follow the other */
  float: right;
}

.singleVerse div span {
  float: none;
}

/* Make the different views of a word stack. This rule can also be surrounded with a .jesus span*/
span.interlinear span span { /* Make this stack on top of each other. */
  display: block;
  /* Turn off floating and padding that was added by the previous rule. */
  float: none;
  padding: 0;
  /* 	height: 20px; */
}

.ancientVocab a {
  font-style: italic;
  color: black;
}

.qereQetifTitle {
  font-weight: bold;
}

.qereDisplay, .accentDisplay {
  direction: rtl;
  text-align: right;
}

.qereDisplay div, .accentDisplay div {
  padding: 8px 0px;
}

.hbFont h2, .unicodeFont h2 {
  font-size: large;
}

.hbFont .verseNumber {
  font-size: x-small;
}

.unicodeFont .verseNumber {
  font-size: small;
}

.rtlDirection {
  text-align: right;
}

/* Allow for spans to be nested more deeply */
span.interlinear span span span {
  /* Turn off block display that was added by the previous rule. */
  display: inline;
}

.inlineNote {
  display: none;
}

.sideNote {
  padding-right: 5px;
}

.visibleInlineNote {
  font-size: 12px;
}

td.primary {
  border-left: 1px solid #ddd;
}

.comparingTable {
  table-layout: fixed;
}

.comparingTable tr {
  padding-bottom: 5px;
}

/* .comparingTable * { */
/*  vertical-align: top; */
/* } */

.headingVerseNumber {
  color: #33339F;
  vertical-align: top;
  width: 75px;
}

.comparingVersionName {
  color: #33339F;
  text-align: center;
}

.primary > .cmpUnderline {
  display: none;
}

.secondary > .cmpStrike {
  display: none;
}

.singleVerse {
  display: block;
}

.singleVerse h2, .singleVerse h3, .singleVerse h4 {
  display: inline;
}

.singleVerse div.l {
  display: inline;
}

.cmpStrike {
  color: #33339F;
  font-weight: bold;
}

.cmpUnderline {
  color: #33339F;
  font-weight: bold;
}

.inlineNoteHighlight {
  background-color: #F3E5B4;
  color: #822433;
  font-weight: bold;
}

.interlinear .verseNumber {
  clear: left;
}

.interlinearChange {
  color: darkgrey;
  /* 	font-style: italic; */
}

.smallHeaders {
  font-size: .7em !important;
  padding-right: 2px;
  font-style: italic;
}

a.smallHeaders {
  color: #33339F;
}

br.paragraph {
  padding-top: 2px;
}

A {
  text-decoration: none;
}

span.w {
  margin-top: 20px;
  border-left: 1px solid #ddd;
  text-align: center;
  padding-left: 3px !important;
  padding-right: 3px !important;
}

span.verseStart {
  clear: left;
}

span.verseStart > a {
  display: inline-block;
}

.rtl span.verseStart {
  clear: right;
}

span.strongs, span.morphs, span.interVerseNumbers {
  text-decoration: none;
  font-size: 90% !important;
  text-align: center;
  font-style: normal;
  color: #26539e;
  border: none;
}

.ancientVocab a {
  color: black !important;
}

.ancientVocab {
  font-family: Cardo;
  font-size: 140%;
}

span.strongs a {
  color: black;
}

sup.verseNumber {
  font-size: 75%;
  color: gray;
}

sup.variant.note {
  font-size: 65%;
  color: #33339F;
}

sup.note a {
  font-size: 10px; // Not % based or it will be too big for Hebrew
  font-weight: normal;
  padding: 0 5px 9px 3px;
  margin-left: -.3em;
}

sup.note a[notetype="crossReference"] {
  font-size: 90%;
}

sup.note a[notetype="alternative"],
sup.note a[notetype="explanation"] {
  font-size: 75%;
}

sup.note a:hover {
  text-decoration: none;
}

sup.note a:visited {
  font-size: 100%;
  font-weight: normal;
}

FONT.lex {
  color: red;
}

span.jesus {
  color: #cc4848;
}

span.speech {
  color: blue;
}

span.strike {
  text-decoration: line-through;
}

span.small-caps {
  font-variant: small-caps;
}

span.underline {
  text-decoration: underline;
}

span.normal {
  font-variant: normal;
}

span.caps {
  text-transform: uppercase;
}

.editable {
  border: 1px dashed black;
}

.editable:hover {
  border: 1px solid black;
  font-style: italic;
}

.editable:focus {
  border: 1px solid black;
  font-style: normal;
}

TD.notes {
  width: 20%;
  background: #f4f4e8;
}

TD.text {
  width: 80%;
}

.notes a {
  color: #33339F;
  font-weight: bold;
  front-size: xx-small;
}

h3.psalmHeading .note {
  font-variant: normal;
  font-size: x-small;
}

.hebrewLanguage {
  font-family: Cardo !important;
  /* 	font-size: 18px !important; */
}

.greekLanguage {
  font-family: Cardo !important;
  /* 	font-size: 16px !important; */
}

.ancientLanguage {
  font-family: Cardo !important;
  /* 	font-size: 16px  !important;	 */
}

// links
a.linkRef,
a.linkRef:hover,
sup.note a,
sup.note a:hover,
sup.note a:visited {
  color: $link-color;
  cursor: pointer;
}

a.linkRef {
  font-weight: normal;
}

/* the following are for dictionary entries */
FONT.orth {
  font-weight: bold;
}

FONT.pron {
  font-style: italic;
}

FONT.def {
  font-style: italic;
}

FONT.usg {
  font-style: plain;
}

#previewReference {
  color: white;
  font-weight: solid;
  z-index: 9999999;
  max-width: 350px;
  max-height: 350px;
  background-color: #F6A828;
  border: 2px solid #E78F08;
  overflow: hidden;
  margin: 5px;
}

.leftPassagePreview, .rightPassagePreview, .closePassagePreview {
  font-size: 60%;
  float: right;
}

#previewReference H2.xgen {
  display: none;
}

#previewReference a {
  float: right;
}
/* ... */

